--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta content="Kapalasar is a traditional market digitalized" name="description">
+    <meta name="keywords" content="Kapalasar, pasar tradisional, traditional market, pasar online, pasar online bandung, startup, pangan, beras organik, gsap">
+    <meta property="og:url" content="https://kapalasar.id">
+    <meta property="og:type" content="website">
+    <meta class="meta-description" property="og:description" content="Kapalasar is a traditional market digitalized">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
